r94 - august, 14, 2009
	* piwam-install.sql : error in constraint name 'acl_action_FK_1' has been
	  fixed
	* /data/updates/1.1.0beta-to-1.1/r92.sql : error in constraint name 
	  'acl_action_FK_1' has been fixed


r93 - august, 14, 2009
	* piwam-install.sql : explicit DB names have been removed
	* /data/updates/1.1.0beta-to-1.1/*.sql : explicit DB names have been removed
	

r92 - august, 3, 2009
	* /data/updates/1.1.0beta-to-1.1/r92.sql : CASCADE behaviour added for some
	  tables
	* piwam-install.sql is up to date
	* test_data.yml : new fixtures for 'Activite' table
	* test_data.yml : fixtures for 'Compte' table are set as enabled
	* test_data.yml : fixtures for a second private association
	* recetteActionsTest.php : tests implemented
	

r91 - august, 3, 2009
	* Edited wiki page through web user interface.
	

r90 - august, 3, 2009
	* Edited wiki page through web user interface
	

r89 - august, 2, 2009
	* test_data.yml : fixtures for all the tables
	* piwam-install.sql is up to date
	* README is up to date : information about Virtual Host configuration
	* install : actions > hide error if user provides wrong username/password
	* README-FR : new file with French version of documentation


r88 - august, 2, 2009
	* fixtures.yml has been renamed as test_data.yml
	* test_data.yml : filled for being ready for tests
	* test/bootstrap/functional.php : load fixtures
	* associationActionsTest.php : new tests (creation of association)
	* membre : actions > processForm > when registering the first user, ACL
	  are given before redirecting to success page
	* updates/1.1.0beta-to-1.1/r88.sql : CASCADE for on delete action has been
	  set to acl_credential table
	

r87 - august, 2, 2009
	* statut : delete > we can't delete if there are Membres who belong to
	  the statut
	* statut : delete > physical deletion
	* statut : index > display error message if we try to delete a used item
	* Statut.php : countMembers has been removed to use the original
	  countMembres instead
	  
